[package]
name = "icecold"
version = "36.0.0"
edition = "2021"
authors = ["IceCold Team"]
description = "Ultra-optimized traffic bot for Termux/Android with AADS & Monetag support"

# Optimizations for release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# Async runtime - optimized for single-threaded on low-end devices
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "net", "time", "macros", "signal", "fs", "process", "io-util", "sync"] }

# HTTP client with proxy support
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks", "gzip", "brotli", "stream"] }

# Async utilities
futures = "0.3"

# Random number generation
rand = "0.8"

# Regex for parsing
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Better error handling
anyhow = "1.0"
thiserror = "1.0"

# Colored terminal output
colored = "2.1"

# For connection pooling
hyper = { version = "0.14", features = ["client", "http1"] }

# Lazy static initialization (for compiled regex)
once_cell = "1.19"

# System info (for detecting Termux)
whoami = "1.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
